# schoolmap

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
assets/: label_mapping.json
configs/: config.yaml
configs/dataset/: default.yaml
configs/paths/: default.yaml  example.yaml
configs/predict/: default.yaml
configs/train/: default.yaml
src/: app.py  compute_n_pixels.py  dataset.py  metrics.py  predict.py  predict_crop.py  train.py
src/dataset/: coco_utils.py  get_imgs_to_predict.py  get_train_images.py  make_coco_json.py  rasterize_masks.py  segmentation_dataset.py
src/dataset/coco/: coco_utils.py  make_coco_json.py
src/hooks/: early_stopping.py  loss_eval.py
src/utils/: add_spatial_information_predict_masks.py  check_cuda.py  extras.py  log_files.py  models.py  predict_patches.py  transforms.py  transforms_crop.py
