[project]
authors = [
  {name = "bencretois", email = "benjamin.cretois@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ"
]
description = ""
license = {text = "GPL-3.0+"}
name = "schoolmap"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
tools = [
  "pre-commit",
  "pyyaml",
  "GitPython"
]

[project.scripts]
"schoolmap_start" = "main:start"

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = ["COM812"]
select = ["E", "W", "I", "F", "UP", "S", "B", "A", "COM", "LOG", "PTH", "Q"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "ANN"]
"nina-python-init.py" = ["S603", "S607"]
